--- a/CSS/homeStyle.css
+++ b/CSS/homeStyle.css
@@ -176,6 +176,7 @@ html{
 .right{
     display: flex;
     flex-direction: row-reverse;
+    align-items: center;
 }
 
 /*content class*/
@@ -231,18 +232,22 @@ textarea::placeholder{
 /*button styling*/
 .btn{
     padding: 5px 10px;
-    margin: 2px;
+    display: block;
+    margin: 4px auto;
     color: #f1f6f9;
     outline: none;
     background-color: transparent;
+    font-family: 'Staatliches';
     border: 2px solid #f1f6f9;
-    font-size: 13px;
+    font-size: 20px;
     border-radius: 10px;
-    cursor: pointer
+    cursor: pointer;
 }
 .btn:hover{
     color: #14274e;
     background-color: #f1f6f9;
+    box-shadow: 0px 0px 3px 1px #f1f6f9;
+    transition: all 0.2s ease-in-out;
 }
 
 /*autofill styling*/
