--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     height: 12em;
-    transition: height 400ms ease-out;
+    transition: height 250ms ease;
 }
 
 .h-nav-resp{
@@ -25,7 +25,7 @@
     list-style: none;
     padding: 5px 3px;
     margin: 2px auto;
-    font-size: 10px;
+    font-size: 14px;
 }
 
 /*search bar*/
@@ -40,10 +40,10 @@
     margin-bottom: 4px;
 }
 .search button{
-    font-size: 10px;
+    font-size: 14px;
 }
 .search input::placeholder{
-    font-size: 15px;
+    font-size: 14px;
     padding: 8px;
 }
 
@@ -55,7 +55,7 @@
 /*navbar visibility*/
 .v-nav-resp{
     visibility: hidden;
-    transition: visibility 50ms ease-in;
+    transition: visibility 5ms ease-in-out;
 }
 
 /*section-1*/
@@ -76,17 +76,18 @@
 
 /*paragraphs*/
 .para{
-    font-size: 8px;
+    font-size: 12px;
 }
 
 /*content*/
 .content{
     max-width: 20em;
+    margin: 15px 0px;
 }
 
 /*section-2*/
 #section-2{
-    height: 33rem;
+    height: 34rem;
 }
 
 #section-2>div>img{
@@ -114,8 +115,20 @@
     font-size: 10px;
 }
 
+/*submit button*/
+.btn{  
+    margin-bottom: 5px;
+    font-size: 12px;
+    font-weight: lighter;
+}
+
 form input::placeholder,
 textarea::placeholder{
     color: #f1f6f9;
-    font-size: 15px;
+    font-size: 12px;
+}
+
+/*footer*/
+footer{
+    font-size: 13px;
 }
